--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,23 +9,24 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header-top ">
-           <div class="header-top__container _container">
-               <div class="header-top__body">
-                   <div class="header-top__info">
+            <div class="header-top__container _container">
+                <div class="header-top__body">
+                    <div class="header-top__info">
                         <div class="header-top__schedule">Работаем 7 дней в неделю</div>
-                        <div class="header-top__time">9:00 - 18:00</div>                
-                   </div>
-               </div>
-           </div>
+                        <div class="header-top__time">9:00 - 18:00</div>
+                    </div>
+                </div>
+            </div>
         </header>
         <header class="header">
             <div class="header__wrapper">
                 <div class="header__container _container">
                     <div class="header__body">
-                        <a href="./catalog.html" class="header__logo">Porten</a>
+                        <a href="./index.html" class="header__logo">Porten</a>
                         <div class="header__main">
                             <div class="header__menu menu">
                                 <nav class="menu__body">
@@ -57,14 +59,18 @@
                             <div class="main__sub-title">Бишкек</div>
                         </div>
                         <div class="main__text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti, molestiae qui voluptatem tempora voluptates omnis eius repellendus maxime, incidunt enim doloremque vero quasi neque iure quisquam id. Blanditiis dignissimos, nobis odit id pariatur quae sunt quas eveniet, ea facere porro vitae assumenda. Expedita, deleniti sit facilis totam incidunt nulla?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti, molestiae qui
+                            voluptatem tempora voluptates omnis eius repellendus maxime, incidunt enim doloremque vero
+                            quasi neque iure quisquam id. Blanditiis dignissimos, nobis odit id pariatur quae sunt quas
+                            eveniet, ea facere porro vitae assumenda. Expedita, deleniti sit facilis totam incidunt
+                            nulla?
                         </div>
                     </div>
                 </div>
-            </section> 
+            </section>
             <section class="season">
                 <div class="season__products">
-                    <div class="products__title _title">Сезон 2020/21</div>
+                    <div class="products__title _title">Наш каталог</div>
                     <div class="products__items">
                         <div class="products__item">
                             <div class="item__image">
@@ -87,11 +93,56 @@
                             <div class="item__title">Louis XVI ATHOS</div>
                             <div class="item__price">165 000 руб.</div>
                         </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
+                        <div class="products__item">
+                            <div class="item__image">
+                                <img src="img/season/62050 1.png" alt="Item">
+                            </div>
+                            <div class="item__title">Louis XVI ATHOS</div>
+                            <div class="item__price">165 000 руб.</div>
+                        </div>
                     </div>
-                </div>
-                <div class="season__collection">
-                    <div class="collection_title _title">Новая коллекция</div>
-                    <a href="./catalog.html" class="collection__button btn">Каталог</a>
                 </div>
             </section>
             <section class="about">
@@ -100,7 +151,7 @@
                         <div class="about__info info">
                             <div class="info__title title">О магазине</div>
                             <div class="info__text text">Если вы хотите купить стильный аксессуары
-                            по выгодным ценам то вы попали по адресу</div>
+                                по выгодным ценам то вы попали по адресу</div>
                         </div>
                         <div class="about__contacts">
                             <div class="categories__contacts title">Контактная информация</div>
@@ -114,7 +165,7 @@
                         <div class="about__keep-in-touch">
                             <div class="keep-in-touch__title title">Рассылка</div>
                             <div class="keep-in-touch__text text">Подпишитесь на рассылку чтобы получать
-                            уведомления о новых товарах</div>
+                                уведомления о новых товарах</div>
                             <div class="keep-in-touch__form form">
                                 <input type="text" class="form__input" placeholder="Ваша почта">
                                 <button class="form__submit">Подписаться</button>
@@ -133,7 +184,8 @@
         </footer>
     </div>
 
-<script src="./js/jquery-3.6.0.min.js"></script>
-<script src="./js/script.js"></script>
+    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
